fix: :bug: on mobile view image placed outside border

--- a/src/styles/templates/_github.scss
+++ b/src/styles/templates/_github.scss
@@ -1,4 +1,5 @@
 @use '../base/vars' as *;
+@use '../base/mixins' as *;
 
 .github {
 	text-align: start;
@@ -39,12 +40,19 @@
 		}
 	}
 
-	&__readme-wrapper {
-		padding: 1.25rem;
+	&__body-border {
+		display: flex;
+		flex-direction: column;
+		flex-grow: 1;
 		border-radius: $border-radius;
 		border-style: solid;
 		border-width: 1px;
 		border-color: #e1e4e8;
+		box-shadow: var(--box-shadow);
+	}
+
+	&__readme-wrapper {
+		padding: 1.25rem;
 
 		.breadcrumb {
 			margin-bottom: 1rem;
@@ -54,6 +62,8 @@
 		}
 
 		article {
+			flex-basis: content;
+
 			h2 {
 				padding-bottom: 0.3rem;
 				font-size: 1.5rem;
@@ -70,6 +80,11 @@
 			p {
 				margin-top: 1rem;
 				font-size: 1rem;
+				letter-spacing: 0.25px;
+			}
+
+			code {
+				background: var(--hover-color);
 			}
 
 			h3 {
@@ -82,7 +97,8 @@
 			}
 
 			img[align='left'] {
-				margin-right: 1.25rem !important;
+				margin-right: 0.65rem;
+				margin: 0.5rem;
 			}
 		}
 	}
